# maketool

./: .cvsignore  .gitignore  .purify  CHANGES  COPYRIGHT  ChangeLog  Makefile  Makefile.in  README.irix  README.md  TODO  acinclude.m4  aclocal.m4  anim3.xpm  anim6.xpm  anim8.xpm  argstest.awk  autoconf.c  autoconf_strs.c  buildrpm  client.c  common.h  config.h.in  configure.in  cvs2changelog  excludes  extract_targets.in  extract_targets.sh  filter.c  filter.h  find.c  glib_extra.c  glib_extra.h  gmake.c  gtkctree12.c  gtkctree12.h  gtkctree22.c  gtkctree22.h  gtkdtree.c  gtkdtree.h  (+38 more)
debian/: changelog  control  rules
doc/: Makefile.in  maketool.1
doc/help/: .gitignore  Makefile.in  entities.sgml.in  help-common.mk.in  help.dsl
doc/help/C/: .cvsignore  Makefile  apply.html  build-menu.xcf  cancel.html  dialog.xcf  help.sgml  index.html  langentities.sgml  mainwin.xcf  ok.html  prefs-kflag.html  toolbar.xcf  tools-again.html
doc/help/common/: .cvsignore  Makefile.in  entities.sgml.in  extract-anchors.awk  help.mk.in
doc/help/la/: .cvsignore  Makefile  help.sgml  langentities.sgml
icons/: .gitignore  BSD-daemon.xpm  Makefile.in  again.xpm  all.xpm  anim0.xpm  anim0a.xpm  anim1.xpm  anim1a.xpm  anim1b.xpm  anim2.xpm  anim2a.xpm  anim3a.xpm  anim3b.xpm  anim4.xpm  anim4a.xpm  anim5.xpm  anim6.xpm  anim7.xpm  anim8.xpm  babygnu_l.xpm  clean.xpm  clear.xpm  error.xpm  file_next.xpm  gnu_l.xpm  gnu_m.xpm  help_cursor.xbm  help_cursor_mask.xbm  info.xpm  maketool.xpm  maketool_l.xpm  next.xpm  pause.xpm  print.xpm  stop.xpm  warning.xpm
intl/: .cvsignore  .gitignore  charset.alias  dcigettext.c  l10nflist.c  localcharset.c  plural.c  ref-add.sed  ref-del.sed
lib/: Makefile.in
lib/gtk1.2/: Makefile.in  README  ctree.patch
lib/gtk1.2/gtk/: Makefile.in  gtkctree.c
lib/gtk2/: Makefile.in  README  ctree.patch
lib/gtk2/gtk/: Makefile.in  gtkctree.c
makesys/: .gitignore  Makefile.in  autoconf-dist.mk  autoconf-maint.mk  automake.mk  imake.mk
po/: .cvsignore  ChangeLog  POTFILES.in  cs.po  ja.po  la.po
test/: .cvsignore  Makefile  crud.mk  fred.c  fred.h  jane.c  jane.h  jane2.h  longline  recurse.mk  retest.c  unendedline
test/abs_sub/: Makefile  absinclude.c
test/autoconf_dist/: .cvsignore  Makefile.in  README  configure
test/autoconf_maint/: .cvsignore  Makefile.in  README  configure.in
test/automake/: .gitignore  AUTHORS  CHANGES  ChangeLog  Makefile.am  NEWS  README  configure.in
test/imake/: .cvsignore  Imakefile  README
test/level2/: Makefile
test/level2/level3/: Makefile
test/level2/level3/level4a/: Makefile
test/level2/level3/level4a/level5a/: Makefile
test/level2/level3/level4b/: Makefile  crud.c
test/level2/level3/level4b/level5c/: Makefile
test/lotsa_targets/: .gitignore  Makefile  README  test.mk
test/subdir1/: Makefile
test/subdir1/subdir1_1/: Makefile
test/subdir2/: Makefile
www/: .cvsignore  Makefile  _common.m4  _copyright.html  _download.m4  _index.html  _styles.html  _thanks.m4  backbone.php.in  banner.html  changelog.html.in  changes2html  cvs2changes  download.html.in  downloadables.m4  features.html.in  htaccess  index.html  index.html.in  index_c.html  index_c.html.in  index_d.html  index_d.html.in  list-binaries.m4  procedure.txt  screenshots.html.in  toc.html.in  versions.m4
www/downloads/: htaccess
