dnl Process this file with autoconf to produce a configure script.
dnl You may need the --localdir option to get the included .m4's
dnl
dnl Maketool - GTK-based front end for gmake
dnl Copyright (c) 1999-2001 Greg Banks
dnl 
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2 of the License, or
dnl (at your option) any later version.
dnl 
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl 
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
dnl
dnl $Id: configure.in,v 1.1 2001-09-28 04:55:46 gnb Exp $
dnl

sinclude(/usr/share/aclocal/missing.m4)dnl
sinclude(/usr/share/aclocal/sanity.m4)dnl
sinclude(/usr/share/aclocal/init.m4)dnl

AC_INIT(crud.c)
AM_INIT_AUTOMAKE(crud,0.1)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_AWK
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL

AC_OUTPUT(Makefile)
